Fix images specs
It fix overlap CSS in Insert images dialog

--- a/core/app/assets/stylesheets/refinery/sections/_layout.scss
+++ b/core/app/assets/stylesheets/refinery/sections/_layout.scss
@@ -828,7 +828,7 @@ body.dialog form {
   }
   #dialog_menu_left {
     position: fixed;
-    left: 12px;
+    left: 30px;
     top: 9px;
     width: 130px;
   }
